INCOMPATIBILITY: translations containing list_all2 may go wrong.  On
Isar level, use abbreviations instead.

* Renamed constant "List.op mem" to "List.memberl" INCOMPATIBILITY:
rarely occuring name references (e.g. ``List.op mem.simps'') require
renaming (e.g. ``List.memberl.simps'').

* Renamed constants "0" to "HOL.zero_class.zero" and "1" to "HOL.one_class.one".
INCOMPATIBILITY.

* Added theory Code_Generator providing class 'eq', allowing for code
generation with polymorphic equality.

* Numeral syntax: type 'bin' which was a mere type copy of 'int' has
been abandoned in favour of plain 'int'. INCOMPATIBILITY --
significant changes for setting up numeral syntax for types:

  - new constants Numeral.pred and Numeral.succ instead
      of former Numeral.bin_pred and Numeral.bin_succ.
  - Use integer operations instead of bin_add, bin_mult and so on.
  - Numeral simplification theorems named Numeral.numeral_simps instead of Bin_simps.
  - ML structure Bin_Simprocs now named Int_Numeral_Base_Simprocs.

See HOL/Integ/IntArith.thy for an example setup.

* New top level command 'normal_form' computes the normal form of a
term that may contain free variables. For example ``normal_form
"rev[a,b,c]"'' produces ``[b,c,a]'' (without proof).  This command is
suitable for heavy-duty computations because the functions are
compiled to ML first.

* Alternative iff syntax "A <-> B" for equality on bool (with priority
25 like -->); output depends on the "iff" print_mode, the default is
"A = B" (with priority 50).

* Renamed constants in HOL.thy and Orderings.thy:
    op +   ~> HOL.plus_class.plus
    op -   ~> HOL.minus_class.minus
    uminus ~> HOL.minus_class.uminus
    op *   ~> HOL.times_class.times
    op <   ~> Orderings.ord_class.less
    op <=  ~> Orderings.ord_class.less_eq

Adaptions may be required in the following cases:

a) User-defined constants using any of the names "plus", "minus", "times",